<?xml version="1.0"?>
<package>
  <name>rbcar_robot_control</name>
  <version>0.0.0</version>
  <description>The rbcar_robot_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="info@robotnik.es">trurl</maintainer>

  <license>BSD</license>

  <author email="info@robotnik.es">Robotnik</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
