<?xml version="1.0"?>
<package>
  <name>rbcar_sim</name>
  <version>1.0.0</version>
  <description>The rbcar_sim package. It contains RBCAR simulation packages</description>
  
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rbcar_sim</url>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rbcar_gazebo</run_depend>

  <export><metapackage/></export>

</package>
