<?xml version="1.0"?>
<package>
  <name>rbcar_sim_bringup</name>
  <version>1.0.0</version>
  <description>The rbcar_sim_bringup package</description>

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <license>BSD</license>

  <author email="cvillar@robotnik.es">Carlos Villar</author>

  <url type="website">http://wiki.ros.org/rbcar_sim_bringup</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbcar_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbcar_sim/issues</url>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
